Bug 1305163 - Don't expose multiple image types through DataTransfer. r=enndeakin, a=ritu

MozReview-Commit-ID: 8HFNmmajjGC